// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketReplyArea/> _hideMacrosAndFocusEditor() should hide macros and focus editor when called 1`] = `
<TicketReplyArea
  actions={
    Object {
      "customers": Object {},
      "macro": Object {},
      "newMessage": Object {},
      "tag": Object {},
      "ticket": Object {},
      "views": Object {},
    }
  }
  applyMacro={[Function]}
  cacheAdded={false}
  currentMacro={Object {}}
  currentTicket={Immutable.Map {}}
  currentUser={Immutable.Map {}}
  customers={Object {}}
  fetchMacrosCancellable={[Function]}
  newMessage={Object {}}
  newMessageType="email"
  notify={[Function]}
  page={1}
  preferences={Object {}}
  selectMacro={[Function]}
  ticket={Immutable.Map {}}
  totalPages={1}
>
  <div
    className="component"
  >
    <div
      className="search"
    >
      <i
        className="searchIcon material-icons md-2 text-info"
      >
        flash_on
      </i>
      <Input
        disabled={false}
        innerRef={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search macros by name, tags or body..."
        tabIndex="3"
        type="text"
      >
        <input
          className="form-control"
          disabled={false}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search macros by name, tags or body..."
          tabIndex="3"
          type="text"
        />
      </Input>
    </div>
    <div
      className="content"
    >
      <TicketReplyMock
        actions={
          Object {
            "customers": Object {},
            "macro": Object {},
            "newMessage": Object {},
            "tag": Object {},
            "ticket": Object {},
            "views": Object {},
          }
        }
        customers={Object {}}
        richAreaRef={[Function]}
        ticket={Immutable.Map {}}
      >
        <div>
          hello
        </div>
      </TicketReplyMock>
    </div>
  </div>
</TicketReplyArea>
`;

exports[`<TicketReplyArea/> should block the reply area because the customer is required on ticket creation with an internal-note 1`] = `
<TicketReplyArea
  actions={
    Object {
      "customers": Object {},
      "macro": Object {},
      "newMessage": Object {},
      "tag": Object {},
      "ticket": Object {},
      "views": Object {},
    }
  }
  applyMacro={[Function]}
  cacheAdded={false}
  currentMacro={Object {}}
  currentTicket={
    Immutable.Map {
      "id": null,
      "customer": null,
    }
  }
  currentUser={Immutable.Map {}}
  customers={Object {}}
  fetchMacrosCancellable={[Function]}
  newMessage={Object {}}
  newMessageType="internal-note"
  notify={[Function]}
  page={1}
  preferences={Object {}}
  selectMacro={[Function]}
  ticket={Immutable.Map {}}
  totalPages={1}
>
  <div
    className="component"
  >
    <div
      className="search"
    >
      <i
        className="searchIcon material-icons md-2 text-info"
      >
        flash_on
      </i>
      <Input
        disabled={true}
        innerRef={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search macros by name, tags or body..."
        tabIndex="3"
        type="text"
      >
        <input
          className="form-control"
          disabled={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search macros by name, tags or body..."
          tabIndex="3"
          type="text"
        />
      </Input>
    </div>
    <div
      className="content"
    >
      <div
        className="replyAreaAlertMessage alert-warning"
      >
        <span>
          To create a ticket with an internal note, please
          <a
            href="https://docs.gorgias.com/video-tutorials/manually-set-the-requester-of-a-ticket-in-gorgias"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            set a customer
             
          </a>
          first in the infobar
        </span>
      </div>
    </div>
  </div>
</TicketReplyArea>
`;

exports[`<TicketReplyArea/> should render 1`] = `
<div
  className="component"
>
  <div
    className="search"
  >
    <i
      className="searchIcon material-icons md-2 text-info"
    >
      flash_on
    </i>
    <Input
      disabled={false}
      innerRef={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search macros by name, tags or body..."
      tabIndex="3"
      type="text"
    />
  </div>
  <div
    className="content"
  >
    <TicketReplyMock
      actions={
        Object {
          "customers": Object {},
          "macro": Object {},
          "newMessage": Object {},
          "tag": Object {},
          "ticket": Object {},
          "views": Object {},
        }
      }
      customers={Object {}}
      richAreaRef={[Function]}
      ticket={Immutable.Map {}}
    />
  </div>
</div>
`;
